# QTestWithCMake

./: CMakeLists.txt  main.cpp
Src/: CMakeLists.txt  QTestWidget.cmake  QTestWidget.cpp  QTestWidget.h  QTestWidget.ui  main.cpp
